Bug 66488 - [HSW][SNA] X does not come up
Summary: [HSW][SNA] X does not come up
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 66491 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-02 08:25 UTC by Paul Neumann
Modified: 2013-07-02 09:43 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log of the failed X start (22.19 KB, text/plain)
2013-07-02 08:25 UTC, Paul Neumann
no flags Details
dmesg output (67.03 KB, text/plain)
2013-07-02 08:25 UTC, Paul Neumann
no flags Details
Xorg.0.log at c361b44 which is working (22.05 KB, text/plain)
2013-07-02 09:30 UTC, Paul Neumann
no flags Details

Description Paul Neumann 2013-07-02 08:25:04 UTC
Created attachment 81849 [details]
Xorg.0.log of the failed X start

Using xf86-video-intel 2.21.11, X does not come up anymore on my Haswell machine. 2.21.10 worked fine in that regard.

$ lspci | grep VGA
00:02.0 VGA compatible controller: Intel Corporation Xeon E3-1200 v3/4th Gen Core Processor Integrated Graphics Controller (rev 06)

On top of the errors in Xorg.0.log, there is a WARN in my dmesg.

Just for the record, I have not tested UXA.
Comment 1 Paul Neumann 2013-07-02 08:25:40 UTC
Created attachment 81850 [details]
dmesg output
Comment 2 Chris Wilson 2013-07-02 08:41:57 UTC
Today's wtf:

Fatal server error:
[ 12419.606] (EE) xf86OpenConsole: VT_ACTIVATE failed: Input/output error
[ 12419.606] (EE) 
[ 12419.606] (EE) 

No idea.
Comment 3 Chris Wilson 2013-07-02 08:43:53 UTC
Did anything else change in the meantime? Can you please bisect if 2.21.10 still works (my guess would be the refcounting of drmMaster is off, but I have no idea how that would result in that particular error).
Comment 4 Paul Neumann 2013-07-02 08:48:45 UTC
(In reply to comment #3)
> Did anything else change in the meantime?
Nope. It works on 2.21.10, I upgrade, log out, it does not work, I downgrade xf86-v-intel via ssh, restart gdm via ssh (as I cannot change the vt at that point) and everything (X, vt changing) works again.
> Can you please bisect if 2.21.10 still works?
You mean bisect between 2.21.10 and 2.21.11?
I can do that. I will report back later, then.
Comment 5 Paul Neumann 2013-07-02 09:07:27 UTC
git bisect shows this:
# first bad commit: [8a6a21bff86100144ba7960fc32a299ac54ada83] sna: Use the existing configuration for initial modes

What I also noticed is that X does indeed come up (although with no display). I can blindly log in and do stuff. Don't know if this is relevant.
Comment 6 Chris Wilson 2013-07-02 09:16:17 UTC
Spotted one bogosity in your Xorg.log, we tried to setup both HDMI/DP connectors on the same encoder. I've pushed

commit c361b449cc3ec15819883afc220aad8823c0072d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jul 2 09:49:48 2013 +0100

    sna: Include connector status in the initial probe
    
    We cannot simply rely on connector->encoder->crtc status as with the
    introduction of Haswell or SDVO we may have multiple connectors using the
    same encoder. So we need to explictly check the connector status first,
    before determining if the output is connected to an active encoder and
    CRTC.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=66488
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

which should fix that, can you please build from git and attach the new Xorg.log?
Comment 7 Paul Neumann 2013-07-02 09:30:39 UTC
Created attachment 81856 [details]
Xorg.0.log at c361b44 which is working

Yep, this is fixed with c361b44.

Thanks
Comment 8 Chris Wilson 2013-07-02 09:39:50 UTC
*** Bug 66491 has been marked as a duplicate of this bug. ***
Comment 9 Chris Wilson 2013-07-02 09:43:23 UTC
Hmm, still not sure how that ended up with the screen being closed, but success is happiness...


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.